Added posts and tiny editor

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://cdn.tiny.cloud/1/1dfhnshx2yf7xe6awhofeso3uk7wkxarcjnzouymf9ndbne6/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
